# CompProject-

./: .gitignore  1PrototypeTest.bat  CMakeLists.txt  README.txt
FlashFinder/: CMakeLists.txt  FlashFinder.cpp
FrameFinder/: CMakeLists.txt  FrameFinder.cpp
GUI/: CMakeLists.txt  GUI.pro  GUIApp.pro  GUIApp.vcxproj  GUIApp.vcxproj.filters  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  sampler.pro  ui_mainwindow.h
GUI/GeneratedFiles/Debug/: moc_mainwindow.cpp
GUI/debug/: GUIApp.ilk
GUI/x64/Debug/GUIApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GUIApp.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OtherFiles/: 0INSTALL_PROJECT.bat  1FlashTest.bat  1FrameTest.bat  2FlashTest.bat  3PrototypeImgTest.bat  3aPrototypeImgTest.bat  3bPrototypeCamTest.bat  4PrototypeShowBinaryCam.bat  README.txt
ProjectCV/: CMakeLists.txt  CV.cpp  CV.h  FindSquare.h  Finder.h  FlashFinder.cpp  FlashFinder.h  FrameFinder.cpp  FrameFinder.h  ViewTransformation.h  game.cpp  game.h  icon.cpp  icon.h  main.cpp  moc_game.cpp  settings.cpp
ProjectCpp/: CMakeLists.txt
ProjectCpp/CV/: CMakeLists.txt  CV.cpp  CV.h  FindSquare.cpp  FindSquare.h  Finder.cpp  FlashFinder.cpp  FlashFinder.h  FrameFinder.cpp  FrameFinder.h  ViewTransformation.cpp  main.cpp  mainFromFlashFinder.cpp
ProjectCpp/FlashFinder/: CMakeLists.txt  Finder.cpp  FlashFinder.cpp  FlashFinder.h  main.cpp
ProjectCpp/FrameFinder/: CMakeLists.txt  Finder.h  FrameFinder.cpp  FrameFinder.h  main.cpp
ProjectCpp/GUI/: CMakeLists.txt  CV.cpp  CV.h  FindSquare.cpp  Finder.h  FlashFinder.cpp  FrameFinder.cpp  FrameFinder.h  ViewTransformation.h  box.h  dialog.cpp  dialog.h  game.cpp  game.h  game.ui  main.cpp  mainwindow.cpp  mainwindow.h  moc_game.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_settings.cpp  settings.h  ui_dialog.h  ui_game.h  ui_mainwindow.h  ui_settings.h
ProjectCpp/PrototypeCam/: CMakeLists.txt  PrototypeCam.cpp
ProjectCpp/PrototypeImg/: CMakeLists.txt  PrototypeImg.cpp
ProjectCpp/PrototypeShowBinaryCam/: CMakeLists.txt  PrototypeShowBinaryCam.cpp
ProjectCpp/ViewTransformation/: CMakeLists.txt  FindSquare.cpp  FindSquare.h  Finder.h  ViewTransformation.cpp  ViewTransformation.h  main.cpp
ProjectQT/: Box.cpp  Box.h  Makefile  Makefile.Debug  Makefile.Release  ProbnyProjektQT.pro  ProjectQT.pro  ProjectQT.vcxproj  dialog.cpp  dialog.h  dialog.ui  flashfinder.pro  game.cpp  game.h  game.ui  globals.cpp  globals.h  icon.cpp  icon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  ui_dialog.h  ui_game.h  ui_mainwindow.h
ProjectQT/doProjektu/: mainwindow.cpp  mainwindow.h  moc_dialog.cpp  moc_mainwindow.cpp  moc_settings.cpp  settings.h
ProjectQT/javaAudioPlayer/: Sound.java
Prototype/: CMakeLists.txt  Prototype.cpp
build-ProjectQT-Desktop_Qt_5_9_2_clang_64bit-Debug/: Makefile  moc_dialog.cpp  moc_mainwindow.cpp  moc_settings.cpp  ui_mainwindow.h  ui_settings.h
build-ProjectQT-Desktop_Qt_5_9_2_clang_64bit-Debug/ProjectQT.app/Contents/: Info.plist
build-ProjectQT-Desktop_Qt_5_9_2_clang_64bit-Debug/ProjectQT.app/Contents/MacOS/: ProjectQT
build-sampler-Desktop_Qt_5_9_2_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-sampler-Desktop_Qt_5_9_2_MSVC2017_64bit-Debug/debug/: moc_mainwindow.cpp  sampler.ilk
